<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_state_illustration"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".35"
        app:srcCompat="@drawable/ic_undraw_empty" />

    <TextView
        android:id="@+id/tv_title_illustration"
        style="@style/TextInfo.ItemColor.Center.Field"
        android:text="@string/title_state_empty"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_state_illustration"
        app:layout_constraintStart_toStartOf="@+id/img_state_illustration"
        app:layout_constraintTop_toBottomOf="@+id/img_state_illustration" />

    <TextView
        android:id="@+id/tv_message_illustration"
        style="@style/TextInfo.ItemColor.Center.Field"
        android:text="@string/message_state_empty"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_illustration"
        app:layout_constraintVertical_bias="0" />

</androidx.constraintlayout.widget.ConstraintLayout>